@@ -1,3 +1,13 @@
+2014-09-02  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Use jsNontrivialString for strings we know are more than a single character
+        https://bugs.webkit.org/show_bug.cgi?id=136393
+
+        Reviewed by Geoffrey Garen.
+
+        * bindings/js/JSCryptoKeySerializationJWK.cpp:
+        (WebCore::addUsagesToJSON):
+
 2014-09-02  Alex Christensen  <achristensen@webkit.org>
 
         Fix bindings tests after r173176.
